got basic sphere to apear

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(
 	common.h
 )
 set(CMAKE_C_FLAGS "-std=c++17 -Wall -Wextra -pedantic")
-set(CMAKE_EXE_LINKER_FLAGS "-lSDL2")
+set(CMAKE_EXE_LINKER_FLAGS "-lSDL2 -lm")
 target_link_libraries(
 	ray
 	SDL2
