working on the math

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.14)
 project(ray)
 add_executable(
 	ray
@@ -5,9 +6,22 @@ add_executable(
 	math.h
 	common.h
 )
-set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra -pedantic -Wno-missing-braces")
-set(CMAKE_EXE_LINKER_FLAGS "-lSDL2")
-target_link_libraries(
-	ray
-	SDL2
-)
+
+if (WIN32)
+	set(CMAKE_CXX_FLAGS "/std:c++17 /MP /GS /TP /W3 -D_CRT_SECURE_NO_WARNINGS")
+	include_directories(
+		D:/libraries/SDL2-2.0.9/include
+	)
+	target_link_libraries(
+		ray
+		D:/libraries/SDL2-2.0.9/lib/x64/SDL2.lib
+		D:/libraries/SDL2-2.0.9/lib/x64/SDL2main.lib
+	)
+else()
+	set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra -pedantic -Wno-missing-braces")
+	set(CMAKE_EXE_LINKER_FLAGS "-lSDL2")
+	target_link_libraries(
+		ray
+		SDL2
+	)
+endif()
